kube/spring.yaml
# Spring - App
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: spring
  name: spring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring
  strategy: {}
  template:
    metadata:
      # annotations:
      #   linkerd.io/inject: enabled
      labels:
        app: spring
    spec:
      serviceAccountName: expensetracker
      containers:
      - image: us.gcr.io/expensetracker-1547098192339/acrackintheice/expense-tracker-spring:0.0.1
        imagePullPolicy: "Always"
        name: spring
        command: ["/bin/bash"]
        args: ["-c", "find -type f -name '*.jar' | xargs java -jar -Dspring.profiles.active=$(PROFILE)"]
        ports:
        - containerPort: 8080
        resources: {}
---
# Spring - Service
kind: Service
apiVersion: v1
metadata:
  name: spring
spec:
  type: ClusterIP
  selector:
    app: spring
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
