kube/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - referer: react.acrackintheice.com
    http:
      paths:
      - backend:
          serviceName: react
          servicePort: 8083
  - host: api.acrackintheice.com
    http:
      paths:
      - backend:
          serviceName: spring
          servicePort: 8080
  - host: hasura.acrackintheice.com
    http:
      paths:
        - backend:
            serviceName: hasura
            servicePort: 8082
